Improve responsive layout and update navigation labels
- Restrict tmp/ file ignores but keep tmp/.gitkeep tracked
- Add min-width to legend in CSS for better display
- Change "New Post" nav link text to "Submit Meme"
- Remove admin-only "Add Tag" link from navbar
- Adjust Bootstrap grid classes for better responsiveness on login,
  register, and new post pages

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,11 +6,8 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav me-auto">
             <a class="nav-link" href="/">Posts</a>
-            <a class="nav-link" href="/posts/new">New Post</a>
+            <a class="nav-link" href="/posts/new">Submit Meme</a>
             <a class="nav-link" href="/posts/random">Random</a>
-            <% if(currentUser && currentUser.role == ("admin")) { %>
-                <a class="nav-link" href="/tags">Add Tag</a>
-            <% } %>
         </div>
         <div class="navbar-nav ms-auto">
             <% if(!currentUser) { %>
