--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -1,7 +1,7 @@
 <% layout('layout/boilerplate') %>
 <div class="row">
     <h1 class="text-center">New Post</h1>
-    <div class="col-6 offset-3">
+    <div class="col-md-12 col-lg-8 mx-auto">
         <form action="/posts" method="POST" novalidate class="form-validation" id="create-form" enctype="multipart/form-data">
             <div class="mb-3">
                 <fieldset class="mb-3">
