--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -2,7 +2,7 @@
 
 <div class="container d-flex justify-content-center align-items-center h-100">
     <div class="row w-100">
-        <div class="col-6 mx-auto">
+        <div class="col-md-12 col-lg-6 mx-auto">
             <div class="card shadow">
                 <div class="card-body">
                     <h5 class="card-title text-center">Login</h5>
