--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,6 +56,7 @@ legend {
     float: right;
     padding: 0.2em 1em;
     width: 30%;
+    min-width: 200px;
     border-bottom-left-radius: 1em;
     font-size: 1rem;
 }
