Add max-width to #posts-container in CSS

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -174,3 +174,7 @@ li {
     border-style: solid;
     border-color: transparent #333 transparent transparent;
 }
+
+#posts-container {
+    max-width: 800px;
+}
